--- a/index.html
+++ b/index.html
@@ -18,10 +18,46 @@
         .navImg {
             width: 6vw;
         }
+
         .divNavImg {
             margin-left: 60px;
-          
+
             margin-top: 10px;
+        }
+
+        .divImgCiudades {
+            height: 65vh;
+        }
+
+        .divImageCover {
+            height: 65vh;
+            width: 102%;
+            background-size: cover;
+            z-index: -1;
+        }
+
+        .divImageCover1 {
+            background-color: rgba(0, 0, 0, .5);
+            height: 65vh;
+            z-index: 0;
+        }
+
+        .divImageCover2 {
+            height: 35vh;
+            margin-top: 300px;
+            padding-right: 100px;
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+            align-items: flex-end;
+        }
+
+        .textDescription {
+            width: 38%;
+        }
+
+        .altoDelParrafoCarsOradores {
+            height: 15vh;
         }
     </style>
 </head>
@@ -55,20 +91,102 @@
                 </li> -->
             </ul>
         </nav>
-        <div class="row position-absolute">
-            <img class="img-fluid" src="./public/img/ba1.jpg" alt="...">
+        <div class="row divImgCiudades">
+            <div class="position-absolute">
+                <img class="divImageCover" src="./public/img/ba1.jpg" alt="...">
+            </div>
+            <div class="position-relative divImageCover1">
+            </div>
+            <div class=" card-img-overlay text-white w-100 text-end divImageCover2">
+                <p class="fs-1 text-end">Conf Bs AS</p>
+                <p class="fs-5 text-end textDescription">Bs As llega por primera vez a Argentina. Un evento para
+                    compartir con nuestra
+                    comunidad el conocimiento y experiencia de los expertos que están creando el futuro de internet. Ven
+                    a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel
+                    que tenemos para tí. Te esperamos!</p>
+                <div class="d-flex flex-row justify-content-end">
+                    <button type="button" class="btn btn-outline-light me-2 fs-5">Quiero ser orador</button>
+                    <button type="button" class="btn btn-success fs-5">Comprar tickets</button>
+                </div>
+            </div>
         </div>
     </header>
-    <div class="container">
+    <main class="pt-3 w-100 d-flex flex-column justify-content-center">
+        <section class="container">
+            <div class="row">
+                <div class="col text-center">
+                    <p class="m-0">CONOCE A LOS</p>
+                    <p class="fs-2"><b>ORADORES</b></p>
+                </div>
+                <div class="row g-0 justify-content-center mb-5">
+                    <div class="col-sm-12 mb-2 col-md-6 col-lg-4 col-xl-3">
+                        <div class="card p-md-2 p-lg-3" style="width: 18rem;">
+                            <img src="./public/img/steve.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <span class="badge text-bg-warning text-dark">JavaScript</span>
+                                <span class="badge text-bg-info text-dark">React</span>
+                                <h5 class="card-title">Steve Jobs</h5>
+                                <p class="card-text overflow-auto altoDelParrafoCarsOradores">Steven Jobs ​​​ empresario, diseñador industrial, magnate
+                                    empresarial, propietario de medios e inversor estadounidense. Cofundador y
+                                    presidente ejecutivo de Apple​ y máximo accionista individual de The Walt Disney
+                                    Company.​</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 mb-2 col-md-6 col-lg-4 col-xl-3">
+                        <div class="card p-md-2 p-lg-3" style="width: 18rem;">
+                            <img src="./public/img/bill.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <span class="badge text-bg-warning text-dark">TypeScript</span>
+                                <span class="badge text-bg-info text-dark">Angular</span>
+                                <h5 class="card-title">Bill Gates</h5>
+                                <p class="card-text overflow-auto altoDelParrafoCarsOradores">Bill Gates es un magnate empresarial, desarrollador de software,
+                                    inversor, autor y filántropo estadounidense. Es cofundador de Microsoft, junto con
+                                    su amigo de la infancia Paul Allen.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 mb-2 col-md-6 col-lg-4 col-xl-3">
+                        <div class="card p-md-2 p-lg-3" style="width: 18rem;">
+                            <img src="./public/img/ada.jpeg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <span class="badge text-bg-warning text-dark">TypeScript</span>
+                                <span class="badge text-bg-info text-dark">Angular</span>
+                                <h5 class="card-title">Ada Lovelace</h5>
+                                <p class="card-text overflow-auto altoDelParrafoCarsOradores">Augusta Ada King, conocida habitualmente como Ada Lovelace, es una
+                                    matemática y escritora británica, célebre sobre todo por su trabajo acerca de la
+                                    computadora mecánica de uso general de Charles Babbage, la denominada máquina
+                                    analítica.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container-fluid mb-5">
+            <div class="row">
+                <div class="col-sm-12 col-lg-6 g-1">
+                    <img src="./public/img/honolulu.jpg" class="card-img-top" alt="...">
+                </div>
+                <div class="col-sm-12 col-lg-6 bg-dark g-1 miclase">
+                    <h2 class="text-white pl-2">Bs As - Octubre</h2>
+                    <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et voluptatem corporis tempore natus cum deleniti? Optio rerum sunt ab qui culpa quae, exercitationem cum pariatur repellat, fuga explicabo provident eligendi magni beatae nostrum? Autem reiciendis officiis sunt repudiandae animi iusto explicabo vitae deleniti facere provident minima, assumenda omnis quaerat.</p>
+                    <button class="btn btn btn-outline-light">
+                        Conocé más
+                    </button>
+                </div>
+            </div>
+        </section>
         <div class="row">
-            <div class="col">
+            <div class="col h-50">
 
             </div>
         </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
+        </script>
+    <script src="https://kit.fontawesome.com/d82d4468f0.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
