--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
                                 <span class="badge text-bg-warning text-dark">JavaScript</span>
                                 <span class="badge text-bg-info text-dark">React</span>
                                 <h5 class="card-title">Steve Jobs</h5>
-                                <p class="card-text overflow-auto altoDelParrafoCarsOradores">Steven Jobs ​​​ empresario, diseñador industrial, magnate
+                                <p class="card-text overflow-auto altoDelParrafoCarsOradores">Steven Jobs ​​​
+                                    empresario, diseñador industrial, magnate
                                     empresarial, propietario de medios e inversor estadounidense. Cofundador y
                                     presidente ejecutivo de Apple​ y máximo accionista individual de The Walt Disney
                                     Company.​</p>
@@ -140,7 +141,8 @@
                                 <span class="badge text-bg-warning text-dark">TypeScript</span>
                                 <span class="badge text-bg-info text-dark">Angular</span>
                                 <h5 class="card-title">Bill Gates</h5>
-                                <p class="card-text overflow-auto altoDelParrafoCarsOradores">Bill Gates es un magnate empresarial, desarrollador de software,
+                                <p class="card-text overflow-auto altoDelParrafoCarsOradores">Bill Gates es un magnate
+                                    empresarial, desarrollador de software,
                                     inversor, autor y filántropo estadounidense. Es cofundador de Microsoft, junto con
                                     su amigo de la infancia Paul Allen.</p>
                             </div>
@@ -153,7 +155,8 @@
                                 <span class="badge text-bg-warning text-dark">TypeScript</span>
                                 <span class="badge text-bg-info text-dark">Angular</span>
                                 <h5 class="card-title">Ada Lovelace</h5>
-                                <p class="card-text overflow-auto altoDelParrafoCarsOradores">Augusta Ada King, conocida habitualmente como Ada Lovelace, es una
+                                <p class="card-text overflow-auto altoDelParrafoCarsOradores">Augusta Ada King, conocida
+                                    habitualmente como Ada Lovelace, es una
                                     matemática y escritora británica, célebre sobre todo por su trabajo acerca de la
                                     computadora mecánica de uso general de Charles Babbage, la denominada máquina
                                     analítica.</p>
@@ -168,12 +171,50 @@
                 <div class="col-sm-12 col-lg-6 g-1">
                     <img src="./public/img/honolulu.jpg" class="card-img-top" alt="...">
                 </div>
-                <div class="col-sm-12 col-lg-6 bg-dark g-1 miclase">
+                <div class="col-sm-12 col-lg-6 bg-dark g-1 p-4">
                     <h2 class="text-white pl-2">Bs As - Octubre</h2>
-                    <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et voluptatem corporis tempore natus cum deleniti? Optio rerum sunt ab qui culpa quae, exercitationem cum pariatur repellat, fuga explicabo provident eligendi magni beatae nostrum? Autem reiciendis officiis sunt repudiandae animi iusto explicabo vitae deleniti facere provident minima, assumenda omnis quaerat.</p>
+                    <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et voluptatem
+                        corporis tempore natus cum deleniti? Optio rerum sunt ab qui culpa quae, exercitationem cum
+                        pariatur repellat, fuga explicabo provident eligendi magni beatae nostrum? Autem reiciendis
+                        officiis sunt repudiandae animi iusto explicabo vitae deleniti facere provident minima,
+                        assumenda omnis quaerat.</p>
                     <button class="btn btn btn-outline-light">
                         Conocé más
                     </button>
+                </div>
+            </div>
+        </section>
+        <section class="container g-0">
+            <div class="row justify-content-center">
+                <div class="col-12 text-center">
+                    <span>CONVIÉRTETE EN UN</span>
+                    <h2>ORADOR</h2>
+                </div>
+                <div class="col-sm-12 col-md-6 justify-content-center">
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus veniam libero
+                        placeat.</span>
+                    <form>
+                        <div class="d-flex flex-column">
+                            <div class="col-sm-12 col-md-6">
+                                <label for="inputEmail1" class="form-label">Nombre</label>
+                                <input type="email" class="form-control" id="InputEmail1"
+                                    aria-describedby="emailHelp">
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="inputPassword1" class="form-label">Apellido</label>
+                                <input type="password" class="form-control" id="inputPassword1">
+                            </div>
+                        </div>
+                        <div class="col-sm-12">
+                            <div class="form-floating mt-1">
+                                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+                                    style="height: 100px"></textarea>
+                                <label for="floatingTextarea2">Sobre que quieres hablar?</label>
+                            </div>
+                        </div>
+
+                        <button type="submit" class="btn btn-success mt-1 col-sm-12">Enviar</button>
+                    </form>
                 </div>
             </div>
         </section>
