--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
         .altoDelParrafoCarsOradores {
             height: 15vh;
         }
+
+        footer {
+            background: #1c3846;
+            background: linear-gradient(90deg, #1c3846 0%, #1d5271 80%);
+            background: -webkit-linear-gradient(90deg, #1c3846 0%, #1d5271 80%);
+            background: -moz-linear-gradient(90deg, #1c3846 0%, #1d5271 80%);
+        }
     </style>
 </head>
 
@@ -197,8 +204,7 @@
                         <div class="d-flex flex-column">
                             <div class="col-sm-12 col-md-6">
                                 <label for="inputEmail1" class="form-label">Nombre</label>
-                                <input type="email" class="form-control" id="InputEmail1"
-                                    aria-describedby="emailHelp">
+                                <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
                             </div>
                             <div class="col-sm-12 col-md-6">
                                 <label for="inputPassword1" class="form-label">Apellido</label>
@@ -218,12 +224,22 @@
                 </div>
             </div>
         </section>
-        <div class="row">
-            <div class="col h-50">
-
-            </div>
-        </div>
     </main>
+    <footer class="mt-5 mb-2">
+        <div class="row">
+            <!-- <div class="col h-50">
+            </div> -->
+            <ul class="d-flex flex-row">
+                <li>Pregunstas Frecuentes</li>
+                <li>Contáctanos</li>
+                <li>Prensa</li>
+                <li>Conferencias</li>
+                <li>Términos y Condiciones</li>
+                <li>Privacidad</li>
+                <li>Estudiantes</li>
+            </ul>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
         </script>
