--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
             background: linear-gradient(90deg, #1c3846 0%, #1d5271 80%);
             background: -webkit-linear-gradient(90deg, #1c3846 0%, #1d5271 80%);
             background: -moz-linear-gradient(90deg, #1c3846 0%, #1d5271 80%);
+            color: white;
+        }
+
+        li {
+            list-style: none;
         }
     </style>
 </head>
@@ -227,9 +232,7 @@
     </main>
     <footer class="mt-5 mb-2">
         <div class="row">
-            <!-- <div class="col h-50">
-            </div> -->
-            <ul class="d-flex flex-row">
+            <ul class="d-flex flex-row justify-content-evenly p-5">
                 <li>Pregunstas Frecuentes</li>
                 <li>Contáctanos</li>
                 <li>Prensa</li>
