--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
 
         .divNavImg {
             margin-left: 60px;
-
-            margin-top: 10px;
         }
 
         .divImgCiudades {
@@ -71,37 +69,46 @@
         li {
             list-style: none;
         }
+
+        @media screen and (max-width:768px){
+            footer ul{
+                flex-direction: column;
+            }
+        }
     </style>
 </head>
 
 <body>
     <header class="conteiner">
-        <nav class="row bg-dark pb-3 position-relative">
-            <div class="col-4 d-flex flex-row divNavImg align-items-center">
-                <img class="navImg " src="./public/img/codoacodo.png"></img>
-                <p class="d-flex align-items-center mt-auto mb-auto text-light fs-3">Conf Bs As</p>
+        <nav class="row  navbar navbar-expand bg-dark pb-3 pt-3 position-relative">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <div class="col-4 d-flex flex-row divNavImg align-items-center">
+                    <img class="navImg " src="./public/img/codoacodo.png"></img>
+                    <p class="d-flex align-items-center mt-auto mb-auto text-light fs-3">Conf Bs As</p>
+                </div>
+    
+                <ul class="col nav d-flex align-items-center flex-row justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link text-light fs-5 active" aria-current="page" href="#">La conferencia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white-50 fs-5" href="#">Los oradores</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white-50 fs-5" href="#">El lugar y la fecha</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white-50 fs-5" href="#">Conviértete en orador</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-success fs-5 me-5" href="#">Comprar tickets</a>
+                    </li>
+                </ul>
             </div>
-
-            <ul class="col nav d-flex align-items-center flex-row justify-content-end">
-                <li class="nav-item">
-                    <a class="nav-link text-light fs-5 active" aria-current="page" href="#">La conferencia</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white-50 fs-5" href="#">Los oradores</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white-50 fs-5" href="#">El lugar y la fecha</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white-50 fs-5" href="#">Conviértete en orador</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-success fs-5 me-5" href="#">Comprar tickets</a>
-                </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li> -->
-            </ul>
         </nav>
         <div class="row divImgCiudades">
             <div class="position-absolute">
@@ -203,10 +210,10 @@
                     <h2>ORADOR</h2>
                 </div>
                 <div class="col-sm-12 col-md-6 justify-content-center">
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus veniam libero
-                        placeat.</span>
-                    <form>
-                        <div class="d-flex flex-column">
+                    <span class="d-flex justify-content-center mb-5">Anótate como orador para dar una charla ígnite.
+                        Cuéntanos de qué quieres hablar!</span>
+                    <form class="d-flex flex-column">
+                        <div class="d-flex flex-columnw-100">
                             <div class="col-sm-12 col-md-6">
                                 <label for="inputEmail1" class="form-label">Nombre</label>
                                 <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
@@ -221,10 +228,11 @@
                                 <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
                                     style="height: 100px"></textarea>
                                 <label for="floatingTextarea2">Sobre que quieres hablar?</label>
+                                <p class="fs-6">Recuenda incuir un título para tu charla</p>
                             </div>
                         </div>
 
-                        <button type="submit" class="btn btn-success mt-1 col-sm-12">Enviar</button>
+                        <button type="submit" class="btn btn-success mt-1 col-sm-12 fs-5">Enviar</button>
                     </form>
                 </div>
             </div>
