--- a/index.html
+++ b/index.html
@@ -7,75 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
     <title>Trabajo Integrador CAC</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        .navImg {
-            width: 6vw;
-        }
-
-        .divNavImg {
-            margin-left: 60px;
-        }
-
-        .divImgCiudades {
-            height: 65vh;
-        }
-
-        .divImageCover {
-            height: 65vh;
-            width: 102%;
-            background-size: cover;
-            z-index: -1;
-        }
-
-        .divImageCover1 {
-            background-color: rgba(0, 0, 0, .5);
-            height: 65vh;
-            z-index: 0;
-        }
-
-        .divImageCover2 {
-            height: 35vh;
-            margin-top: 300px;
-            padding-right: 100px;
-            display: flex;
-            flex-direction: column;
-            justify-content: start;
-            align-items: flex-end;
-        }
-
-        .textDescription {
-            width: 38%;
-        }
-
-        .altoDelParrafoCarsOradores {
-            height: 15vh;
-        }
-
-        footer {
-            background: #1c3846;
-            background: linear-gradient(90deg, #1c3846 0%, #1d5271 80%);
-            background: -webkit-linear-gradient(90deg, #1c3846 0%, #1d5271 80%);
-            background: -moz-linear-gradient(90deg, #1c3846 0%, #1d5271 80%);
-            color: white;
-        }
-
-        li {
-            list-style: none;
-        }
-
-        @media screen and (max-width:768px){
-            footer ul{
-                flex-direction: column;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
@@ -90,7 +23,7 @@
                     <img class="navImg " src="./public/img/codoacodo.png"></img>
                     <p class="d-flex align-items-center mt-auto mb-auto text-light fs-3">Conf Bs As</p>
                 </div>
-    
+
                 <ul class="col nav d-flex align-items-center flex-row justify-content-end">
                     <li class="nav-item">
                         <a class="nav-link text-light fs-5 active" aria-current="page" href="#">La conferencia</a>
@@ -197,7 +130,7 @@
                         pariatur repellat, fuga explicabo provident eligendi magni beatae nostrum? Autem reiciendis
                         officiis sunt repudiandae animi iusto explicabo vitae deleniti facere provident minima,
                         assumenda omnis quaerat.</p>
-                    <button class="btn btn btn-outline-light">
+                    <button class="btn btn-outline-light">
                         Conocé más
                     </button>
                 </div>
@@ -240,7 +173,7 @@
     </main>
     <footer class="mt-5 mb-2">
         <div class="row">
-            <ul class="d-flex flex-row justify-content-evenly p-5">
+            <ul class="d-flex flex-row justify-content-evenly p-5 listas">
                 <li>Pregunstas Frecuentes</li>
                 <li>Contáctanos</li>
                 <li>Prensa</li>
@@ -252,8 +185,7 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
-        </script>
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d82d4468f0.js" crossorigin="anonymous"></script>
 </body>
 
