--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 <body>
     <header class="conteiner">
-        <nav class="row  navbar navbar-expand bg-dark pb-3 pt-3 position-relative">
+        <nav class="row  navbar navbar-expand bg-dark pb-3 pt-3 ">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <div class="col-4 d-flex flex-row divNavImg align-items-center">
-                    <img class="navImg " src="./public/img/codoacodo.png"></img>
+                    <img class="navImg" src="./public/img/codoacodo.png" alt="...">
                     <p class="d-flex align-items-center mt-auto mb-auto text-light fs-3">Conf Bs As</p>
                 </div>
 
@@ -47,9 +47,7 @@
             <div class="position-absolute">
                 <img class="divImageCover" src="./public/img/ba1.jpg" alt="...">
             </div>
-            <div class="position-relative divImageCover1">
-            </div>
-            <div class=" card-img-overlay text-white w-100 text-end divImageCover2">
+            <div class="text-white vw-100 text-end divImageCover2">
                 <p class="fs-1 text-end">Conf Bs AS</p>
                 <p class="fs-5 text-end textDescription">Bs As llega por primera vez a Argentina. Un evento para
                     compartir con nuestra
@@ -121,15 +119,37 @@
         <section class="container-fluid mb-5">
             <div class="row">
                 <div class="col-sm-12 col-lg-6 g-1">
-                    <img src="./public/img/honolulu.jpg" class="card-img-top" alt="...">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="./public/img/ba2.jpg" class="d-block w-100 h-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./public/img/ba1.jpg" class="d-block w-100 h-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./public/img/ba3.jpg" class="d-block w-100 h-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-12 col-lg-6 bg-dark g-1 p-4">
                     <h2 class="text-white pl-2">Bs As - Octubre</h2>
-                    <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et voluptatem
-                        corporis tempore natus cum deleniti? Optio rerum sunt ab qui culpa quae, exercitationem cum
-                        pariatur repellat, fuga explicabo provident eligendi magni beatae nostrum? Autem reiciendis
-                        officiis sunt repudiandae animi iusto explicabo vitae deleniti facere provident minima,
-                        assumenda omnis quaerat.</p>
+                    <p class="text-white">Buenos Aires es una ciudad vibrante y emocionante, que sin duda es una
+                        excelente opción para celebrar un evento como "Conf Bs As" de "Codo a Codo".
+                        Buenos Aires es la capital de Argentina y la ciudad más grande del país, con una población de
+                        alrededor de 3 millones de personas. Es una ciudad cosmopolita y multicultural que atrae a
+                        turistas y viajeros de todo el mundo. Buenos Aires es famosa por su arquitectura elegante, sus
+                        calles empedradas, sus plazas verdes y sus coloridos barrios, cada uno con su propia
+                        personalidad y estilo.
+                        Cuenta con una amplia variedad de espacios y opciones para todo tipo de reuniones, desde
+                        conferencias y exposiciones hasta conciertos y festivales. Hay varios centros de convenciones y
+                        recintos para eventos en la ciudad, como La Rural, ubicado en el barrio de Palermo, que es uno
+                        de los más grandes de América Latina. También hay muchos hoteles, teatros y salas de conciertos
+                        que ofrecen espacios para eventos.
+                        La ciudad cuenta con una amplia oferta gastronómica, que incluye desde restaurantes
+                        elegantes hasta parrillas tradicionales y puestos de comida callejera. Los barrios más populares
+                        para salir a comer son Palermo, San Telmo y Puerto Madero.</p>
                     <button class="btn btn-outline-light">
                         Conocé más
                     </button>
@@ -185,7 +205,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d82d4468f0.js" crossorigin="anonymous"></script>
 </body>
 
