--- a/index.html
+++ b/index.html
@@ -73,14 +73,13 @@
                         <div class="card p-md-2 p-lg-3" style="width: 18rem;">
                             <img src="./public/img/steve.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <span class="badge text-bg-warning text-dark">JavaScript</span>
-                                <span class="badge text-bg-info text-dark">React</span>
+                                <span class="badge bg-warning text-dark">JavaScript</span>
+                                <span class="badge bg-info text-light">React</span>
                                 <h5 class="card-title">Steve Jobs</h5>
-                                <p class="card-text overflow-auto altoDelParrafoCarsOradores">Steven Jobs ​​​
-                                    empresario, diseñador industrial, magnate
-                                    empresarial, propietario de medios e inversor estadounidense. Cofundador y
-                                    presidente ejecutivo de Apple​ y máximo accionista individual de The Walt Disney
-                                    Company.​</p>
+                                <p class="card-text overflow-auto altoDelParrafoCarsOradores">Steven Jobs empresario,
+                                    diseñador industrial, magnate empresarial, propietario de medios e inversor
+                                    estadounidense. Cofundador y presidente ejecutivo de Apple y máximo accionista
+                                    individual de The Walt Disney Company.</p>
                             </div>
                         </div>
                     </div>
@@ -88,8 +87,8 @@
                         <div class="card p-md-2 p-lg-3" style="width: 18rem;">
                             <img src="./public/img/bill.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <span class="badge text-bg-warning text-dark">TypeScript</span>
-                                <span class="badge text-bg-info text-dark">Angular</span>
+                                <span class="badge bg-warning text-dark">TypeScript</span>
+                                <span class="badge bg-info text-light">Angular</span>
                                 <h5 class="card-title">Bill Gates</h5>
                                 <p class="card-text overflow-auto altoDelParrafoCarsOradores">Bill Gates es un magnate
                                     empresarial, desarrollador de software,
@@ -102,8 +101,8 @@
                         <div class="card p-md-2 p-lg-3" style="width: 18rem;">
                             <img src="./public/img/ada.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <span class="badge text-bg-warning text-dark">TypeScript</span>
-                                <span class="badge text-bg-info text-dark">Angular</span>
+                                <span class="badge bg-secondary text-light">Negocios</span>
+                                <span class="badge bg-danger text-light">Startups</span>
                                 <h5 class="card-title">Ada Lovelace</h5>
                                 <p class="card-text overflow-auto altoDelParrafoCarsOradores">Augusta Ada King, conocida
                                     habitualmente como Ada Lovelace, es una
