--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Trabajo Integrador CAC</title>
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="apple-touch-icon" href="./public/img/codoacodo.png" />
+    <link rel="shorcut icon" href="./public/img/codoacodo.png" type="image/x-png" />
+    <link rel="icon" href="./public/img/codoacodo.png" type="image/x-png" />
 </head>
 
 <body>
