--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="row g-0 justify-content-center mb-5">
                     <div class="col-sm-12 mb-2 col-md-6 col-lg-4 col-xl-3">
-                        <div class="card p-md-2 p-lg-3" style="width: 18rem;">
+                        <div class="card p-md-2 p-lg-3 cardList">
                             <img src="./public/img/steve.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <span class="badge bg-warning text-dark">JavaScript</span>
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <div class="col-sm-12 mb-2 col-md-6 col-lg-4 col-xl-3">
-                        <div class="card p-md-2 p-lg-3" style="width: 18rem;">
+                        <div class="card p-md-2 p-lg-3 cardList">
                             <img src="./public/img/bill.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <span class="badge bg-warning text-dark">TypeScript</span>
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                     <div class="col-sm-12 mb-2 col-md-6 col-lg-4 col-xl-3">
-                        <div class="card p-md-2 p-lg-3" style="width: 18rem;">
+                        <div class="card p-md-2 p-lg-3 cardList">
                             <img src="./public/img/ada.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <span class="badge bg-secondary text-light">Negocios</span>
@@ -193,10 +193,10 @@
             </div>
         </section>
     </main>
-    <footer class="mt-5 mb-2">
+    <footer class="col mt-5 mb-2">
         <div class="row">
             <ul class="d-flex flex-row justify-content-evenly p-5 listas">
-                <li>Pregunstas Frecuentes</li>
+                <li>Preguntas Frecuentes</li>
                 <li>Contáctanos</li>
                 <li>Prensa</li>
                 <li>Conferencias</li>
