--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <div class="col-4 d-flex flex-row divNavImg align-items-center">
-                    <img class="navImg" src="./public/img/codoacodo.png" alt="...">
+                    <a href="#"><img class="navImg" src="./public/img/codoacodo.png" alt="..."></a>
                     <p class="d-flex align-items-center mt-auto mb-auto text-light fs-3">Conf Bs As</p>
                 </div>
 
@@ -32,16 +32,16 @@
                         <a class="nav-link text-light fs-5 active" aria-current="page" href="#">La conferencia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white-50 fs-5" href="#">Los oradores</a>
+                        <a class="nav-link text-white-50 fs-5" href="#ORADORES">Los oradores</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white-50 fs-5" href="#">El lugar y la fecha</a>
+                        <a class="nav-link text-white-50 fs-5" href="#FECHAYLUGAR">El lugar y la fecha</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white-50 fs-5" href="#">Conviértete en orador</a>
+                        <a class="nav-link text-white-50 fs-5" href="#SEORADOR">Conviértete en orador</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-success fs-5 me-5" href="#">Comprar tickets</a>
+                        <a class="nav-link text-success fs-5 me-5" href="./public/sectiions/tickets.html">Comprar tickets</a>
                     </li>
                 </ul>
             </div>
@@ -68,7 +68,7 @@
         <section class="container">
             <div class="row">
                 <div class="col text-center">
-                    <p class="m-0">CONOCE A LOS</p>
+                    <p id="ORADORES" class="m-0">CONOCE A LOS</p>
                     <p class="fs-2"><b>ORADORES</b></p>
                 </div>
                 <div class="row g-0 justify-content-center mb-5">
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-lg-6 bg-dark g-1 p-4">
+                <div class="col-sm-12 col-lg-6 bg-dark g-1 p-4" id="FECHAYLUGAR">
                     <h2 class="text-white pl-2">Bs As - Octubre</h2>
                     <p class="text-white">Buenos Aires es una ciudad vibrante y emocionante, que sin duda es una
                         excelente opción para celebrar un evento como "Conf Bs As" de "Codo a Codo".
@@ -158,7 +158,7 @@
                 </div>
             </div>
         </section>
-        <section class="container g-0">
+        <section class="container g-0" id="SEORADOR">
             <div class="row justify-content-center">
                 <div class="col-12 text-center">
                     <span>CONVIÉRTETE EN UN</span>
