--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel
                     que tenemos para tí. Te esperamos!</p>
                 <div class="d-flex flex-row justify-content-end">
-                    <button type="button" class="btn btn-outline-light me-2 fs-5">Quiero ser orador</button>
-                    <button type="button" class="btn btn-success fs-5">Comprar tickets</button>
+                    <button type="button" class="btn btn-outline-light me-2 fs-5"><a class="text-decoration-none " href="#SEORADOR">Quiero ser orador</a></button>
+                    <button type="button" class="btn btn-success fs-5"><a class="text-decoration-none text-white" href="./public/sectiions/tickets.html">Comprar tickets</a></button>
                 </div>
             </div>
         </div>
@@ -171,11 +171,11 @@
                         <div class="d-flex flex-columnw-100">
                             <div class="col-sm-12 col-md-6">
                                 <label for="inputEmail1" class="form-label">Nombre</label>
-                                <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
+                                <input type="text" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
                             </div>
                             <div class="col-sm-12 col-md-6">
                                 <label for="inputPassword1" class="form-label">Apellido</label>
-                                <input type="password" class="form-control" id="inputPassword1">
+                                <input type="text" class="form-control" id="inputPassword1">
                             </div>
                         </div>
                         <div class="col-sm-12">
