--- a/public/sectiions/tickets.html
+++ b/public/sectiions/tickets.html
@@ -121,7 +121,7 @@
                 </div>
                 <div class="d-flex">
                     <div class="w-50">
-                        <input type="reset" required value="Borrar" class="btn btn-danger w-100">
+                        <input type="reset" id="buttonDelete" required value="Borrar" class="btn btn-danger w-100">
                     </div>
                     <div class="w-50 ms-3">
                         <input type="button" required value="Resumen" id="buttonSuccess" class="btn btn-success w-100">
