--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel
                     que tenemos para tí. Te esperamos!</p>
                 <div class="d-flex flex-row justify-content-end">
-                    <button type="button" class="btn btn-outline-light me-2 fs-5"><a class="text-decoration-none " href="#SEORADOR">Quiero ser orador</a></button>
+                    <button type="button" class="btn btn-outline-light me-2 fs-5"><a class="text-decoration-none" href="#SEORADOR">Quiero ser orador</a></button>
                     <button type="button" class="btn btn-success fs-5"><a class="text-decoration-none text-white" href="./public/sectiions/tickets.html">Comprar tickets</a></button>
                 </div>
             </div>
@@ -153,7 +153,9 @@
                         elegantes hasta parrillas tradicionales y puestos de comida callejera. Los barrios más populares
                         para salir a comer son Palermo, San Telmo y Puerto Madero.</p>
                     <button class="btn btn-outline-light">
-                        Conocé más
+                        <a class="text-decoration-none" target="_blank" href="https://turismo.buenosaires.gob.ar/es/article/atenci%C3%B3n-al-turista">
+                            Conocé más
+                        </a>
                     </button>
                 </div>
             </div>
@@ -186,7 +188,6 @@
                                 <p class="fs-6">Recuenda incuir un título para tu charla</p>
                             </div>
                         </div>
-
                         <button type="submit" class="btn btn-success mt-1 col-sm-12 fs-5">Enviar</button>
                     </form>
                 </div>
