--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
         </section>
         <section class="container-fluid mb-5">
-            <div class="row">
+            <div class="row d-flex align-items-center">
                 <div class="col-sm-12 col-lg-6 g-1">
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
